<resources>
    <string name="app_name">Geosave</string>

    <string name="title_gps_info" translatable="false">Gps info</string>
    <string name="title_map">Map</string>
    <string name="title_locations">Saved locations</string>
    <string name="title_locations_short">Locations</string>
    <string name="title_preferences">Preferences</string>

    <string name="gps_permissions_declined">GPS permissions are required for basic app functionality</string>
    <string name="gps_enable_declined">Enable GPS for high accuracy reading</string>

    <string name="gps_fallback_dialog_msg">GPS is turned off. Display setting page to turn it on?</string>
    <string name="gps_fallback_dialog_yes">Yes</string>
    <string name="gps_fallback_dialog_no">No</string>
    <string name="gps_fallback_dialog_no_toast">Your location is not updated without GPS turned on!</string>

    <string name="location_title">Location</string>
    <string name="position_title">Latitude / Longitude</string>
    <string name="position_placeholder">0.000000, 0.000000</string>
    <string name="copy_button_desc">copy button</string>
    <string name="value_unknown">-</string>
    <string name="altitude_title">Altitude</string>
    <string name="accuracy_title">Accuracy</string>
    <string name="speed_title">Speed</string>
    <string name="bearing_title">Bearing</string>
    <string name="provider_title">Provider</string>
    <string name="provider_gps">GPS</string>
    <string name="provider_gsm">GSM</string>
    <string name="provider_api_extra">+ API</string>
    <string name="clipboard_label">location</string>
    <string name="clipboard_toast">Copied to the clipboard</string>

    <string name="map_type_card_title">Map type</string>
    <string name="map_type_button_default">default</string>
    <string name="map_type_button_satellite">satellite</string>
    <string name="map_type_button_hybrid">hybrid</string>
    <string name="map_type_button_terrain">terrain</string>
    <string name="map_type_icon_desc">Map type icon</string>

    <string name="dialog_startup_title_text">Sign in for full experience</string>
    <string name="dialog_startup_message_text">With Geosave account you will be able to collaborate on location data with your coworkers and friends. Your data will be backed-up and accessible from multiple devices at once.\n\nBut no worries, you can also use Geosave without signing in if you don\'t need extra features now.</string>
    <string name="dialog_startup_yes_button_text">Sign-in/Login</string>
    <string name="dialog_startup_no_button_text">Not now</string>
    <string name="dialog_startup_image_desc">dialog_startup_image_desc</string>

    <string name="menu_option_add_title">Add new</string>
    <string name="menu_option_preferences_title">Preferences</string>
    <string name="menu_options_share_title">Share location</string>
    <string name="pref_account_title">Geosave account</string>
    <string name="pref_sign_in_login_title">Sign-in/Login</string>
    <string name="pref_sign_in_login_summary">Register or login to Geosave account</string>
    <string name="pref_logout_title">Logout</string>
    <string name="pref_delete_account_title">Delete account</string>
    <string name="pref_delete_account_summary">Permanently delete local data and Geosave account</string>
    <string name="pref_units_title">Units</string>
    <string name="pref_location_units_title">Location</string>
    <string name="pref_alt_units_title">Altitude</string>
    <string name="pref_speed_units_title">Speed</string>
    <string name="pref_acc_units_title">Accuracy</string>
    <string name="pref_location_acq_title">Location acquisition</string>
    <string name="pref_alt_api_title">Improve altitude accuracy</string>
    <string name="pref_alt_api_summary_on">Open-Elevation API - may increase mobile data transfer usage</string>
    <string name="pref_alt_api_summary_off">GPS provider - low accuracy</string>
    <string name="pref_alt_api_freq_title">API call frequency</string>
    <string name="pref_alt_api_summary">Adjust Open-Elevation API call interval (during movement)</string>

    <string-array name="pref_location_units_entries">
        <item>Decimal</item>
        <item>Sexigesimal (DMS)</item>
        <item>Decimal degrees (DD)</item>
        <item>Degrees decimal minutes (DM)</item>
    </string-array>

    <string-array name="pref_location_units_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="pref_alt_units_entries">
        <item>meters (m)</item>
        <item>kilometers (km)</item>
        <item>feats (ft)</item>
        <item>land miles (mi)</item>
    </string-array>

    <string-array name="pref_alt_units_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="pref_acc_units_entries">
        <item>meters (m)</item>
        <item>kilometers (km)</item>
        <item>feats (ft)</item>
        <item>land miles (mi)</item>
        <item>nautical miles (nmi)</item>
    </string-array>

    <string-array name="pref_acc_units_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="pref_speed_units_entries">
        <item>m/s</item>
        <item>km/h</item>
        <item>ft/s (fps)</item>
        <item>mph</item>
    </string-array>

    <string-array name="pref_speed_units_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="preferences_logged_out_toast">You have logged out from Geosave</string>
    <string name="preferences_delete_account_dialog_message">Deleting account will result in permanent removal of all your data!\n\nThis action is not reversible, are you sure?</string>
    <string name="preferences_delete_account_dialog_yes">Yes</string>
    <string name="preferences_delete_account_dialog_no">No</string>
    <string name="preferences_delete_account_toast">You have deleted Geosave account, all data removed. You can continue to use Geosave locally</string>

    <string name="dialog_seekBar_button_text">OK</string>
    <string name="dialog_seekBar_title_text">Seconds:</string>
    <string name="share_intent_subject">My location</string>
    <string name="pref_share_full_key">pref_share_full</string>
    <string name="pref_share_full_title">Share button behaviour</string>
    <string name="pref_share_full_summary_on">Share full location info</string>
    <string name="pref_share_full_summary_off">Share only horizontal position</string>
    <string name="repos_fab_add_new">Create new</string>
    <string name="repos_fab_browse_public">Browse public</string>
    <string name="repos_fab_join_private">Join private</string>
    <string name="repo_name_icon_desc">repo name icon</string>
    <string name="repo_name_title">Name:</string>
    <string name="add_repo_radio_private_label">Private</string>
    <string name="add_repo_radio_public_label">Public</string>
    <string name="repo_privacy_title">Visibility:</string>
    <string name="repo_security_title">Add/edit permission:</string>
    <string name="add_repo_radio_selected_label">Selected users</string>
    <string name="add_repo_radio_everybody_label">No restrictions</string>
    <string name="add_repo_dialog_cancel_button_label">Cancel</string>
    <string name="add_repo_dialog_create_button_label">Create</string>
    <string name="dialog_add_repo_title_text">Create new repository</string>
    <string name="dialog_add_repo_name_error_text">This field can\'t be empty!</string>
    <string name="dialog_add_repo_loading_anim_desc">loading animation</string>
    <string name="repo_info_title">Info:</string>
    <string name="repos_no_repo_message_text">You don\'t have any repositories yet, create one now!</string>
    <string name="add_repo_error_toast">Unknown error occurred, try again</string>
    <string name="add_repo_no_network_toast">Repository will be uploaded when network becomes available</string>
    <string name="repo_card_location_number_label">Locations: %1$d</string>
    <string name="repo_card_contributors_number_label">Contributors: %1$d</string>
    <string name="visibility_icon_desc">visibility icon</string>
    <string name="repo_icon_desc">repository icon</string>
    <string name="repo_icon_add_popup_text">Click to add image</string>
    <string name="invite_icon_desc">invite icon</string>
    <string name="contributor_icon_desc">contributor icon</string>
    <string name="repo_contributors_more_text">+ %1$d others</string>
    <string name="repo_no_locations_message">This repository has no locations yet</string>
    <string name="location_picture_desc">location picture</string>
    <string name="location_card_alt_label_text">Altitude:</string>
    <string name="location_card_accuracy_label_text">Accuracy:</string>
    <string name="dialog_add_image_title_text">Add/modify image</string>
    <string name="add_image_dialog_cancel">Cancel</string>
    <string name="add_image_dialog_upload">upload</string>
    <string name="add_image_preview_desc">add image preview</string>
    <string name="dialog_add_image_camera_text">Take new photo</string>
    <string name="dialog_add_image_browse_text">Browse gallery</string>
    <string name="dialog_add_image_browse_files_text">Browse documents</string>
    <string name="toast_camera_permission_not_granted">This permission is required to get photo!</string>
    <string name="toast_invalid_file">Selected file is not a valid picture file!</string>
    <string name="dialog_add_location_title_text">Add new location</string>
    <string name="add_location_dialog_cancel">Cancel</string>
    <string name="add_location_dialog_upload">upload</string>
    <string name="add_to_repository_spinner_label">Repository:</string>
    <string name="add_location_no_repos_toast">Create or join repository first in locations tab</string>
    <string name="add_image_dialog_no_network_toast">Image will be updated when network becomes available</string>
    <string name="location_default_name">location</string>
    <string name="no_location_available">Location not yet determined</string>
    <string name="add_location_no_network_toast">Location will be uploaded when network becomes available</string>
    <string name="loading_repos_toast">Loading repos, please wait&#8230;</string>
    <string name="map_cam_follow_type_on">Map is following you</string>
    <string name="map_cam_follow_type_off">Map is not following you</string>
</resources>
