<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ GeoSave - app for easy sharing and collaborating on GPS related data
  ~ Copyright (C) 2018  Jakub Dorda
  ~
  ~ Software under GPLv3 licence - full copyright notice available at:
  ~ https://github.com/jakdor/geosave/blob/master/README.md
  -->

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/dialog_startup_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="w,9:16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/dialog_startup_image_desc"/>

    <TextView
        android:id="@+id/dialog_startup_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/dialog_startup_title_text"
        android:textAlignment="gravity"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_startup_image" />

    <TextView
        android:id="@+id/dialog_startup_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:text="@string/dialog_startup_message_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_startup_title" />

    <Button
        android:id="@+id/dialog_startup_yes_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:text="@string/dialog_startup_yes_button_text"
        android:textColor="@color/materialGrey"
        android:textSize="18sp"
        android:backgroundTint="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_startup_message" />

    <Button
        android:id="@+id/dialog_startup_no_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="8dp"
        android:text="@string/dialog_startup_no_button_text"
        android:textColor="@color/materialGrey"
        android:textSize="18sp"
        android:backgroundTint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_startup_message" />

    <View
        android:id="@+id/dialog_startup_footer"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_startup_yes_button" />

</android.support.constraint.ConstraintLayout>