<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ GeoSave - app for easy sharing and collaborating on GPS related data
  ~ Copyright (C) 2018  Jakub Dorda
  ~
  ~ Software under GPLv3 licence - full copyright notice available at:
  ~ https://github.com/jakdor/geosave/blob/master/README.md
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/materialGrey">

        <TextView
            android:id="@+id/dialog_add_location_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/dialog_add_location_title_text"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dialog_add_location_repo_spinner_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/add_to_repository_spinner_label"
            app:layout_constraintBottom_toBottomOf="@+id/dialog_add_location_repo_spinner_frame"
            app:layout_constraintEnd_toStartOf="@+id/dialog_add_location_repo_spinner_frame"
            app:layout_constraintTop_toTopOf="@+id/dialog_add_location_repo_spinner_frame" />

        <FrameLayout
            android:id="@+id/dialog_add_location_repo_spinner_frame"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/spinner_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/dialog_add_location_name"
            app:layout_constraintTop_toBottomOf="@+id/dialog_add_location_title">

            <Spinner
                android:id="@+id/dialog_add_location_repo_spinner"
                style="@style/Base.Widget.AppCompat.Spinner"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_margin="1dp"
                android:spinnerMode="dialog" />

        </FrameLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/dialog_add_location_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/dialog_add_location_guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.15" />

        <ImageView
            android:id="@+id/dialog_add_location_name_icon"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/repo_name_icon_desc"
            android:padding="2dp"
            android:src="@drawable/ic_location"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintEnd_toStartOf="@+id/dialog_add_location_guideline2"
            app:layout_constraintStart_toStartOf="@+id/dialog_add_location_guideline"
            app:layout_constraintTop_toBottomOf="@+id/dialog_add_location_repo_spinner_frame" />

        <TextView
            android:id="@+id/dialog_add_location_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:labelFor="@id/dialog_add_location_name"
            android:text="@string/repo_name_title"
            app:layout_constraintBottom_toBottomOf="@+id/dialog_add_location_name_icon"
            app:layout_constraintStart_toEndOf="@+id/dialog_add_location_name_icon"
            app:layout_constraintTop_toTopOf="@+id/dialog_add_location_name_icon" />

        <EditText
            android:id="@+id/dialog_add_location_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:inputType="text"
            android:maxLength="64"
            app:layout_constraintBottom_toBottomOf="@+id/dialog_add_location_name_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/dialog_add_location_name_title" />

        <ImageView
            android:id="@+id/dialog_add_location_info_icon"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/repo_name_icon_desc"
            android:padding="2dp"
            android:src="@drawable/ic_about"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintEnd_toStartOf="@+id/dialog_add_location_guideline2"
            app:layout_constraintStart_toStartOf="@+id/dialog_add_location_guideline"
            app:layout_constraintTop_toBottomOf="@+id/dialog_add_location_name" />

        <TextView
            android:id="@+id/dialog_add_location_info_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:labelFor="@id/dialog_add_location_info"
            android:text="@string/repo_info_title"
            app:layout_constraintBottom_toBottomOf="@+id/dialog_add_location_info_icon"
            app:layout_constraintEnd_toStartOf="@+id/dialog_add_location_info"
            app:layout_constraintTop_toTopOf="@+id/dialog_add_location_info_icon" />

        <EditText
            android:id="@+id/dialog_add_location_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:inputType="text"
            android:maxLength="128"
            app:layout_constraintBottom_toBottomOf="@+id/dialog_add_location_info_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/dialog_add_location_name" />

        <Button
            android:id="@+id/dialog_add_location_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/add_location_dialog_cancel"
            android:textColor="@color/materialGrey"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_add_location_info" />

        <Button
            android:id="@+id/dialog_add_location_upload_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="12dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/add_location_dialog_upload"
            android:textColor="@color/materialGrey"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_add_location_info" />

        <ImageView
            android:id="@+id/dialog_add_location_loading_anim"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/dialog_add_repo_loading_anim_desc"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/dialog_add_location_upload_button"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/dialog_add_location_upload_button"
            app:layout_constraintTop_toTopOf="@+id/dialog_add_location_upload_button" />

        <View
            android:id="@+id/dialog_add_location_footer"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_add_location_upload_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>