<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ GeoSave - app for easy sharing and collaborating on GPS related data
  ~ Copyright (C) 2018  Jakub Dorda
  ~
  ~ Software under GPLv3 licence - full copyright notice available at:
  ~ https://github.com/jakdor/geosave/blob/master/README.md
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/repos_swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/repos_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </android.support.v4.widget.SwipeRefreshLayout>

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/repos_fab_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        fab:fab_addButtonColorNormal="@color/white"
        fab:fab_addButtonColorPressed="@color/white_pressed"
        fab:fab_addButtonPlusIconColor="@color/half_black"
        fab:fab_addButtonSize="normal"
        fab:fab_addButtonStrokeVisible="false"
        fab:fab_expandDirection="up"
        fab:fab_labelStyle="@style/fab_labels_style"
        fab:layout_constraintBottom_toBottomOf="parent"
        fab:layout_constraintEnd_toEndOf="parent">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/repos_fab_private"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/white"
            fab:fab_colorPressed="@color/white_pressed"
            fab:fab_size="mini"
            fab:fab_title="@string/repos_fab_join_private" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/repos_fab_public"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/white"
            fab:fab_colorPressed="@color/white_pressed"
            fab:fab_size="mini"
            fab:fab_title="@string/repos_fab_browse_public" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/repos_fab_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/white"
            fab:fab_colorPressed="@color/white_pressed"
            fab:fab_size="mini"
            fab:fab_title="@string/repos_fab_add_new" />

    </com.getbase.floatingactionbutton.FloatingActionsMenu>

</android.support.constraint.ConstraintLayout>